--- a/package.json
+++ b/package.json
@@ -12,9 +12,12 @@
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-popper": "0.9.2",
+    "react-redux": "^7.2.6",
+    "react-redux-form": "^1.16.14",
     "react-router-dom": "4.2.2",
-    "react-scripts": "4.0.3",
+    "react-scripts": "^4.0.3",
     "reactstrap": "5.0.0",
+    "redux": "^4.1.1",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
