--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "font-awesome": "4.7.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.2",
+    "react-icon": "^1.0.0",
+    "react-icons": "^4.3.1",
     "react-popper": "0.9.2",
     "react-redux": "^7.2.6",
     "react-redux-form": "^1.16.14",
