--- a/package.json
+++ b/package.json
@@ -10,9 +10,9 @@
     "bootstrap": "^5.1.3",
     "bootstrap-social": "5.1.1",
     "font-awesome": "4.7.0",
+    "mdb-react-ui-kit": "^1.6.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.2",
-    "react-icon": "^1.0.0",
     "react-icons": "^4.3.1",
     "react-popper": "0.9.2",
     "react-redux": "^7.2.6",
