--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@testing-library/user-event": "^12.1.10",
     "bootstrap": "^5.1.3",
     "bootstrap-social": "5.1.1",
+    "cross-fetch": "^3.1.4",
     "font-awesome": "4.7.0",
     "mdb-react-ui-kit": "^1.6.0",
     "react": "^17.0.1",
