--- a/package.json
+++ b/package.json
@@ -9,9 +9,12 @@
     "@testing-library/user-event": "^12.1.10",
     "bootstrap": "^5.1.3",
     "bootstrap-social": "5.1.1",
+    "chart": "^0.1.2",
+    "chart.js": "^3.6.0",
     "font-awesome": "4.7.0",
     "mdb-react-ui-kit": "^1.6.0",
     "react": "^17.0.1",
+    "react-chartjs-2": "^3.3.0",
     "react-dom": "^17.0.2",
     "react-icons": "^4.3.1",
     "react-popper": "0.9.2",
@@ -21,6 +24,7 @@
     "react-router-dom": "^5.3.0",
     "react-scripts": "^4.0.3",
     "reactstrap": "^9.0.0",
+    "recharts": "^2.1.6",
     "redux": "^4.1.2",
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.4.0",
