--- a/package.json
+++ b/package.json
@@ -11,9 +11,13 @@
     "bootstrap-social": "5.1.1",
     "chart": "^0.1.2",
     "chart.js": "^3.6.0",
+    "chartist": "^0.11.4",
     "font-awesome": "4.7.0",
     "mdb-react-ui-kit": "^1.6.0",
+    "mdbreact": "^5.1.0",
     "react": "^17.0.1",
+    "react-bootstrap": "^2.0.2",
+    "react-chartist": "^0.14.4",
     "react-chartjs-2": "^3.3.0",
     "react-dom": "^17.0.2",
     "react-icons": "^4.3.1",
